	- API: Renamed event_register to event_ns_register
	- API: Added event_cs_register
	- Protocols: Fixed bugs and added isonchan() for checking whether a user is on a channel or not.
	- Core: Check for m_muteban in InspIRCd
	- Modules: nickserv/info - Added "<nick> is a Services Operator." if they are identified to an account with soper privs
	- Chakora: Use POSIX::RT::Timer.
	- API: Added flaglist_add flaglist_del and flag_exists
	- Chakora: Added chanserv/register and full status sync subs, channel and user member of channel trackers and bug fixes.
	- API: Added event_kick and event_topic
	- Protocols: Track KICK and TOPIC
	- API: Added create_core_flags
	- Modules: added chanserv/info and chanserv/flist
	- Modules: (chanserv|nickserv|operserv)/help: Improved how help is displayed.
	- API: Added is_tainted
	- Modules: Made ChanServ modular with chanserv/main. All ChanServ modules will load this if it's not loaded as it is dependent on ChanServ.
          You should add chanserv/main to autoload before any ChanServ modules regardless.
	- Chakora: updateTS is now a config option. WE HIGHLY ENCOURAGE ENABLING IT.
	- API: added has_flag
	- Modules: Added chanserv/sync
	- API: added ison
	- Modules: Added chanserv/invite
	- Protocols: InspIRCd renamed to InspIRCd12, support for InspIRCd20 will be added soon.
	- API: added event_stopic for topic bursts
	- Protocols: Added raw_motd and raw_admin
	- Modules: Added chanserv/op, chanserv/voice, chanserv/protect, chanserv/halfop, and chanserv/owner
	- API: added flag +L for viewing channel access list
	- API: added in_group
	- Modules: Added to nickserv/set: set accountname and nostatus
	- API: extended is_register to channels
	- Modules: added memoserv/main
	- Modules: added chanserv/set
	- Modules: Added to nickset/set: set noexpire
	- API: added account_name to get an account name via a grouped nick
	- Modules: Added to chanserv/set: set noexpire